tests/test73.rael.exp
Error [2:15]: Expected number or range
| log :array at "string"
|               ^
